[gd_scene load_steps=2 format=3 uid="uid://bgp6758r5tsm5"]

[ext_resource type="Script" path="res://classes/equipment/BaseEquipment.gd" id="1_gq5er"]

[node name="BaseEquipment" type="Node2D"]
script = ExtResource("1_gq5er")

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
